test/files/neg/t8291.check
t8291.scala:5: error: implicit error;
!I e: X[Int, String]
  Could not find implicit for Int or String

  implicitly[X[Int, String]]
            ^
t8291.scala:6: error: implicit error;
!I e: X[Int, String]
  Could not find implicit for Int or String

  implicitly[Z[String]]
            ^
2 errors
